--- a/src/index.css
+++ b/src/index.css
@@ -10,17 +10,17 @@
 }
 
 body {
+  box-sizing: border-box;
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
+    font-family: 'Kantumruy Pro', sans-serif;
     /* background: rgb(240, 129, 121); */
     /* background-image: linear-gradient(to right,rgb(245, 134, 143), rgb(216, 176, 239)); */
-    background: rgb(40, 40, 117);
+    background: rgb(205, 53, 122);
     background: #202023;
     background-image: linear-gradient(rgb(4, 88, 171), rgb(7, 124, 89));
     background: rgb(4, 88, 171);
-    /* background: firebrick; */
-    /* background-image: linear-gradient(to right, rgb(67, 166, 215), rgb(249, 132, 237)); */
-    /* background: #eae1dc; */
 }
